--- a/WWGachaExport/Views/ConfigWindow.xaml
+++ b/WWGachaExport/Views/ConfigWindow.xaml
@@ -7,7 +7,7 @@
                  xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
                  mc:Ignorable="d"
                  DataContext="{Binding Source={StaticResource Locator}, Path=ConfigWindow}"
-                 Title="ConfigWindow" Height="250" Width="450"
+                 Title="程序设置" Height="250" Width="450"
                  WindowStartupLocation="CenterOwner"
                  ResizeMode="NoResize">
     <Grid>
