--- a/WWGachaExport/Views/Dialogs/UpdateGachaDataDialog.xaml
+++ b/WWGachaExport/Views/Dialogs/UpdateGachaDataDialog.xaml
@@ -1,14 +1,12 @@
-﻿<ui:FluentWindow x:Class="WWGachaExport.Views.UpdateGachaDataWindow"
+﻿<ui:FluentWindow x:Class="WWGachaExport.Views.Dialogs.UpdateGachaDataDialog"
                  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                  xmlns:local="clr-namespace:WWGachaExport.Views"
-                 xmlns:helpers="clr-namespace:WWGachaExport.Helpers"
                  xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-                 helpers:DialogResultHelper.DialogResult="{Binding DialogResult}"
                  mc:Ignorable="d"
-                 DataContext="{Binding Source={StaticResource Locator}, Path=UpdateGachaDataWindow}"
+                 DataContext="{Binding Source={StaticResource Locator}, Path=UpdateGachaDataDialog}"
                  Title="更新记录" Height="400" Width="400"
                  WindowStartupLocation="CenterOwner"
                  ResizeMode="NoResize">
