--- a/WWGachaExport/Views/ConfigWindow.xaml
+++ b/WWGachaExport/Views/ConfigWindow.xaml
@@ -7,7 +7,7 @@
                  xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
                  mc:Ignorable="d"
                  DataContext="{Binding Source={StaticResource Locator}, Path=ConfigWindow}"
-                 Title="程序设置" Height="250" Width="450"
+                 Title="程序设置" Height="280" Width="450"
                  WindowStartupLocation="CenterOwner"
                  ResizeMode="NoResize">
     <Grid>
@@ -33,6 +33,7 @@
                 <RowDefinition Height="45"  />
                 <RowDefinition Height="45"  />
                 <RowDefinition Height="45"  />
+                <RowDefinition Height="45"  />
                 <RowDefinition />
                 <RowDefinition Height="30" />
             </Grid.RowDefinitions>
@@ -47,6 +48,8 @@
             <TextBlock Grid.Row="2" Margin="3" HorizontalAlignment="Center" VerticalAlignment="Center" Text="隐藏新手池：" />
             <ui:ToggleSwitch Grid.Row="2" Grid.Column="1" Margin="4" VerticalAlignment="Center" OffContent="关闭" OnContent="开启" IsChecked="{Binding IgnoreNoobPool}"/>
 
+            <TextBlock Grid.Row="3" Margin="3" HorizontalAlignment="Center" VerticalAlignment="Center" Text="修复无法获取：" />
+            <ui:Button Grid.Row="3" Grid.Column="1" Margin="4" VerticalAlignment="Center" Height="37" Content="修复" HorizontalAlignment="Stretch" Command="{Binding FixEngineConfig}"/>
 
             <TextBlock Grid.Row="4" Grid.ColumnSpan="3" HorizontalAlignment="Center" VerticalAlignment="Center" Text="https://github.com/QChan12/WWGachaExport"/>
         </Grid>
